--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="topnav">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'image' %}">Home</a>
+                <input type="text" placeholder="Search..">
+                <button>Search</button>
+                
 
             </div>
 
@@ -23,3 +26,5 @@
 </body>
 
 </html>
+
+
