--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -12,8 +12,7 @@
 
         <div class="col-sm-6 col-md-6">
             {% if user.is_authenticated %}
-            <input type="text" placeholder="Search..">
-            <button>Search</button>
+           
             <ul>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
@@ -37,9 +36,15 @@
             <li>
                 <a class='btn btn-default' href="/accounts/login">Login</a>
             </li>
+            
 
             {% endif %}
+            {% if user.is_authenticated %}
 
+            <a href="{%url 'new-image'%}">Add image</a>
+            <input type="text" placeholder="Search..">
+            <button>Search</button>
+            {% endif %}
         </div>
 
         
