--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -24,6 +24,9 @@
                             <a href="{% url 'image' %}">Home</a>
                         </li>
                         <li>
+                            <a href="{% url 'profile'%}">Add  Profile</a>
+                         </li>
+                        <li>
                             <a href="/accounts/password/change">Change Password</a>
                         </li>
                         <li>
