--- a/pictures/templates/profile.html
+++ b/pictures/templates/profile.html
@@ -1,21 +1,49 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
+{% load bootstrap4 %}
 {% load static %}
-{% load bootstrap4%}
 {% block content %}
-{{block.super}}
-
 <div class="container">
-<div class="row">
-    <div class="col-md-4">
-        <img src="{{ user.profile.profile_photo.url}}" alt="Profile">
-    </div>
-    <div class="col-md-8">
-            <h3>{{user.username}}</h3>
-            <a href="{% url 'add_profile' %}">Edit profile</a>
-    </div>
-    
-</div>
-     
-</div>
+    <div class="jumbotron">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="content-section">
+                    <div class="media">
+                        <img src="{{user.profile.profile_photo.url}}" alt="Profile" class="img_profile">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="media-body">
+                    <div class="hello">
+                        <h4 class="account-heading">{{user.username}}</h4>
+                        <button class="btn btn-outline-primary" style="margin-left:30px;"><a href="{%url 'add_profile' %}">Add
+                         Profile</a></button><i class="fa fa-sun-o" style="font-size: 28px;"></i>
+                         <button class="btn btn-outline-primary" style="margin-left:30px;"><a href="{%url 'edit_profile' %}">Edit
+                                Profile</a></button><i class="fa fa-sun-o" style="font-size: 28px;"></i>
+                    </div>
+                </div>
+            </div>
 
+
+        <div class="yes" style="margin-left: 3px;justify-content: space-around;;">
+          <p><strong>{{images|length}} Posts</strong></p>
+          <p><strong>{{user|length}} Followers</strong></p>
+          <p><strong>{{user|length}} Following</strong></p>
+        </div>
+         <p class="text-secondary ml-4">Email:{{user.email}}</p>
+         <p class="text-secondary ml-4">Bio:{{user.profile.bio}}</p>
+       </div>
+     </div>
+</div>
+<hr>
+<div class="row">
+{% for user in imgs %}
+<div class="col-md-4" style="margin-right: 5%;">
+  <img src="{{user.image.url}}" class="img-responsive">
+</div>
+{% endfor %}
+
+        </div>
+    </div>
+</div>
 {% endblock %}
