--- a/pictures/templates/update.html
+++ b/pictures/templates/update.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container" style="background-color:#fff;">
         <div class="row">
-            <form action="{%url 'add_profile'%}" method="post" enctype="multipart/form-data">
+            <form action="{%url 'edit_profile'%}" method="post" enctype="multipart/form-data">
                 {%csrf_token%}
                 {% bootstrap_form form%}
                 <input id="id_myfield" type="submit" class="btn btn-success btn-lg" value="Post">
