--- a/pictures/templates/comment.html
+++ b/pictures/templates/comment.html
@@ -10,12 +10,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <form action="{%url 'comment'%}" method="post" enctype="multipart/form-data">
+            <form action="{%url 'comment' image_id %}" method="post" enctype="multipart/form-data">
                 {%csrf_token%}
                 {% bootstrap_form form%}
                 <input id="id_myfield" type="submit" class="btn btn-success btn-lg" value="Post">
             </form>
-            {% endblock %}
             {% block scripts %}
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             {% bootstrap_javascript %} {% endblock %}
