--- a/pictures/templates/index.html
+++ b/pictures/templates/index.html
@@ -14,15 +14,13 @@
 
         <div class="col-md-4">
             <h2>{{ image.image_caption}} </h2>
-            <img src="{{image.image.url}}" class="img-responsive" alt="Image" data-toggle="modal"
-                data-target="#{{image.id}}" style="font-size:300px;">
+            <img src="{{image.image.url}}" class="img-responsive" alt="Image" data-toggle="modal" data-target="#{{image.id}}"
+                style="font-size:300px;">
         </div>
-        {% endfor %}
-        {% for image in images %}
         <!-- Modal -->
         <div class="col-md-4">
-            <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog"
-                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+                aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -34,7 +32,14 @@
                         <div class="modal-body">
                             <img src="{{image.image.url}}" class="img-responsive" alt="Image">
                             <p><strong>Description</strong>: {{ image.image_caption}} </p>
-
+                            <p><i class="fa fa-comment"></i></p>
+                            <a href="{% url 'comment' image.id %}">comment</a>
+                            {% for coment in image.comments_set.all %}
+                            <p>{{coment.comment}}</p>
+                            {% endfor %}
+                            <a class='info'>
+                                <p>{{x.likes}} likes<i class="fa fa-heart-o"></i></p>
+                            </a><span style="font-size:20px;">{{x.likes.count}}</span>
 
                         </div>
                     </div>
