--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -12,7 +12,7 @@
 
         <div class="col-sm-6 col-md-6">
             {% if user.is_authenticated %}
-           
+
             <ul>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
@@ -23,7 +23,7 @@
                         <li>
                             <a href="{% url 'image' %}">Home</a>
                         </li>
-                        
+
                         <li>
                             <a href="/accounts/password/change">Change Password</a>
                         </li>
@@ -37,21 +37,36 @@
             <li>
                 <a class='btn btn-default' href="/accounts/login">Login</a>
             </li>
-            
+
 
             {% endif %}
             {% if user.is_authenticated %}
 
             <a href="{%url 'new-image'%}">Add image</a>
-            <input type="text" placeholder="Search..">
-            <button>Search</button>
+
             <li>
-                    <a href="{% url 'profile'%}">Profile</a>
-                 </li>
+                <a href="{% url 'profile'%}">Profile</a>
+            </li>
+
+            <!-- Adding a search form  -->
+            <div class="col-sm-4 col-md-4 navbar-right">
+
+                <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search User" name="User">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+            <!-- search form end -->
             {% endif %}
         </div>
 
-        
+
 
 
 
