--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -2,76 +2,61 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Leckerli+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <br><br><br>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#EEEEEE;border:#EEE;padding:10px;">
         <div class="container-fluid">
 
-            <div class="navbar-header">
-                {% if user.is_authenticated %}
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <form class="navbar-form" role="search" action="{% url 'search_results'%}">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search User" name="image">
+                        <div class="input-goup-btn">
+                            <button class="btn btn-default" type="submit"><i
+                                    class="glyphicon glyphicon-search"></i>Search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
 
-
-                <div class="dropdown">
-                    <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
-                        aria-expanded="false">Account
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu" role="menu">
-
-
-                        <li>
-                            <a href="/accounts/password/change">Change Password</a>
-                        </li>
-                        <li>
-                            <a href="/logout">Logout</a>
-                        </li>
-                    </ul>
-                </div>
-
-                {% else %}
-                <li>
-                    <a class='btn btn-default' href="/accounts/login">Login</a>
-                </li>
-
-
-                {% endif %}
-                {% if user.is_authenticated %}
-                <a class="navbar-brand" style="color: rgb(31, 30, 30);" class="navbar-brand" href="{% url 'image' %}"><i
-                        class="fa fa-instagram" aria-hidden="true" style="font-size:28px;"></i>
+                <a href="{% url 'new-image' %}">
+                    <i class="fa fa-camera" aria-hidden="true"
+                        style="font-size:28px;color: rgb(31, 30, 30);;padding-right:40px"></i>
                 </a>
-                <a style="color: rgb(27, 27, 27);font-family: 'Leckerli One', cursive;font-size:38px;"
-                    class="navbar-brand" href="{% url 'image' %}">Instagram</a>
-
-                <a href="{% url 'new-image' %}"><i class="fa fa-camera" aria-hidden="true"
-                        style="font-size:28px;color: rgb(31, 30, 30);;padding-right:40px"></i></a>
-
                 <a href="{% url 'profile' %}"><i class="fa fa-user-circle-o" aria-hidden="true"
                         style="font-size:28px;color: rgb(31, 30, 30);padding-right:40px"></i></a>
 
-                <!-- Adding a search form  -->
-                <div class="col-sm-4 col-md-4 navbar-right">
+                <div class="col-sm-3" style="float:right; margin-top:-20px;margin-right:80px">
+                    {% if user.is_authenticated%}
+                    <ul>
 
-                    <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+                        <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
+                            aria-expanded="false" style="margin-top:10px">Account<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
 
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search User" name="User">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit"><i
-                                        class="glyphicon glyphicon-search">Search</i></button>
-                            </div>
-                        </div>
+                            <a href="/accounts/password/change">Change Password</a>
 
-                    </form>
+                            <li>
+                                <a href="/logout">Logout</a>
+                            </li>
+                        </ul>
+                        </li>
+                    </ul>
+                    {% else %}
+                    <li>
+                        <a class="btn btn-default" href="/accounts/login">Login</a>
+                    </li>
+                    </ul>
+                    {% endif%}
                 </div>
-                <!-- search form end -->
-                {% endif %}
             </div>
-
+        </div>
     </nav>
 </body>
 
