--- a/pictures/templates/registration/login.html
+++ b/pictures/templates/registration/login.html
@@ -1,6 +1,10 @@
 {%extends "registration/base2.html"%}
 {% load bootstrap4 %}
+{% load static%}
 {% block content %}
+
+<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+
 <div class="container">
   <div class="row">
     <!-- Empty div -->
@@ -12,7 +16,7 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Sign In</h3>
+          <h3 class="text-center" style="font-family: 'Anton', sans-serif; margin-top:'50px';">Welcome to Intagram, Please sign in!</h3>
         </div>
         <div class="panel-body">
 
