--- a/pictures/templates/registration/registration_form.html
+++ b/pictures/templates/registration/registration_form.html
@@ -1,4 +1,5 @@
-{%extends "registration/base2.html"%} {% load bootstrap4 %}
+{%extends "registration/base2.html"%} 
+{% load bootstrap4 %}
 {% block content %}
 <div class="container">
   <div class="row">
