--- a/pictures/templates/index.html
+++ b/pictures/templates/index.html
@@ -14,9 +14,12 @@
         <!--Display  images  -->
 
         <div class="col-md-12">
-            <h2>{{ image.image_caption}} </h2>
+
+            <img src="{{user.profile.profile_photo.url}}" alt="Profile" class="img_profile" class="img-responsive"
+                style="border-radius: 50%; width: 10%">
             <img src="{{image.image.url}}" class="img-responsive" alt="Image" data-toggle="modal" data-target="#{{image.id}}"
                 style="font-size:300px;">
+            <h3><strong>Image-caption:</strong>{{ image.image_caption}} </h3>
         </div>
         <!-- Modal -->
         <div class="col-md-4">
@@ -39,8 +42,8 @@
                             <p>{{coment.comment}}</p>
                             {% endfor %}
                             <a class='info' href="{% url 'likes' image.id%}">
-                                    <p>{{image.likes}} likes<i class="fa fa-heart-o"></i></p>
-                                </a><span style="font-size:20px;">{{image.likes.count}}</span>
+                                <p>{{image.likes}} likes<i class="fa fa-heart-o"></i></p>
+                            </a><span style="font-size:20px;">{{image.likes.count}}</span>
 
                         </div>
                     </div>
