--- a/pictures/templates/index.html
+++ b/pictures/templates/index.html
@@ -17,8 +17,18 @@
 
             <img src="{{user.profile.profile_photo.url}}" alt="Profile" class="img_profile" class="img-responsive"
                 style="border-radius: 50%; width: 10%">
-            <img src="{{image.image.url}}" class="img-responsive" alt="Image" data-toggle="modal" data-target="#{{image.id}}"
-                style="font-size:300px;">
+            <img src="{{image.image.url}}" class="img-responsive" alt="Image" data-toggle="modal" data-target="#{{image.id}}"style="font-size:300px;">
+
+            <p><i class="fa fa-comment"></i></p>
+                            <a href="{% url 'comment' image.id %}">comment</a>
+                            {% for coment in image.comments_set.all %}
+                            <p>{{coment.comment}}</p>
+                            {% endfor %}
+                            <a class='info' href="{% url 'likes' image.id%}">
+                                <p>{{image.likes}} likes<i class="fa fa-heart-o"></i></p>
+                            </a><span style="font-size:20px;">{{image.likes.count}}</span>
+
+                
             <h3><strong>Image-caption:</strong>{{ image.image_caption}} </h3>
         </div>
         <!-- Modal -->
@@ -34,6 +44,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
+                            <h2>Image Description</h2><hr>
                             <img src="{{image.image.url}}" class="img-responsive" alt="Image">
                             <p><strong>Description</strong>: {{ image.image_caption}} </p>
                             <p><i class="fa fa-comment"></i></p>
