--- a/static/css/inst.css
+++ b/static/css/inst.css
@@ -1,7 +1,5 @@
-.col-md-12 img{
-    margin-top: 8px;
-    vertical-align: middle;
-    height:200px;
-    width: 300px;
+.container{
     
+        border: 3px solid #73AD21;
+        
 }
