--- a/pictures/templates/profile.html
+++ b/pictures/templates/profile.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block content %}
-<div class="container">
+<div class="container" style="margin-left:25%">
 
     <div class="row">
 
