--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -11,6 +11,8 @@
 <body>
     <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#EEEEEE;border:#EEE;padding:10px;">
         <div class="container-fluid">
+            
+                <button href="{% url 'image' %}">HOME</button>
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <form class="navbar-form" role="search" action="{% url 'search_results'%}">
